Added the following verification: if user is granted to view approved field.

--- a/src/Cekurte/ZCPEBundle/Resources/views/Default/indexAdmin.html.twig
+++ b/src/Cekurte/ZCPEBundle/Resources/views/Default/indexAdmin.html.twig
@@ -33,10 +33,12 @@
                                 <th>{{ 'Revised'|trans }}</th>
                                 <td>{{ qtdQuestions.revised }}</td>
                             </tr>
-                            <tr>
-                                <th>{{ 'Approved'|trans }}</th>
-                                <td>{{ qtdQuestions.approved }}</td>
-                            </tr>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <tr>
+                                    <th>{{ 'Approved'|trans }}</th>
+                                    <td>{{ qtdQuestions.approved }}</td>
+                                </tr>
+                            {% endif %}
                             <tr>
                                 <th>{{ 'Email has sent'|trans }}</th>
                                 <td>{{ qtdQuestions.emailWasSent }}</td>
