Test user area.

--- a/src/Cekurte/Custom/GeneratorBundle/Resources/views/layout.html.twig
+++ b/src/Cekurte/Custom/GeneratorBundle/Resources/views/layout.html.twig
@@ -7,7 +7,7 @@
 <li class="{% if menu_active == 'home' %}active{% endif %}">
     <a href="{{ path("admin") }}"><span class="glyphicon glyphicon-home"></span> {{ 'Dashboard' | trans }}</a>
 </li>
-{% if is_granted('ROLE_CONTRIBUTOR') %}
+{% if is_granted('ROLE_USER') %}
     <li class="dropdown {% if menu_active == 'question' %} active{% endif %}">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-tasks"></span> <span>{{ 'Manage'|trans }}</span> <b class="caret"></b></a>
         <ul class="dropdown-menu">
