Layout and Setup users.

--- a/src/Cekurte/Custom/GeneratorBundle/Resources/views/layout.html.twig
+++ b/src/Cekurte/Custom/GeneratorBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends '@CekurteGeneratorBundleVendor/layout.html.twig' %}
-{%- block app_title -%}{{ 'ZCE / ZCPE' | trans }}{%- endblock -%}
+{%- block app_title -%}{{ 'Rumo a certificação PHP' | trans }}{%- endblock -%}
 
 {%- set menu_active = '' -%}
 
@@ -55,7 +55,7 @@
 {%- endblock -%}
 
 {%- block footer_content -%}
-    <a href="http://sistemas.cekurte.com/" target="_blank">@2014 - João Paulo Cercal</a>
+    <a href="https://github.com/jpcercal/ZCPE" target="_blank">@2014 - João Paulo Cercal</a>
 {%- endblock -%}
 
 {%- block stylesheets -%}
